На сайте-визитке бала добавлена прямая ссылка на репозиторий

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@
     text-decoration: none;
 }
 
+.nav a span{
+    margin-left: 10%;
+}
+
 .sys-info{
     /* position: absolute; */
     bottom: 2%;
